<resources>
    <string name="app_name">RaccTracc</string>
    <string name="racctracc">RaccTracc</string>
    <string name="log_in">Log in</string>
    <string name="your_name">Your name</string>
    <string name="your_emai_adress">Your emai adress</string>
    <string name="your_email_address">Your email address</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="header_image">Header Image</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="log_out">Log out</string>
    <string name="clear_values">Clear Values</string>
    <string name="lays_140g_cheese">Lays(140g) - Cheese</string>

</resources>